fixed displaying layout issue on profile page

--- a/jk_backend/public/css/profile/profile-m.less
+++ b/jk_backend/public/css/profile/profile-m.less
@@ -77,11 +77,13 @@
   }
   #footstep-list-div {
     float: left;
-    border: solid 1px @light-grey;
     border-radius: 6px;
-    margin: 20px 1.6% 0px 1.6%;
-    width: 95%;
-    top: 200px;
+    font-size: 12px;
+    margin: 10px 1.6% 0px 1.6%;
+    width: 164px;
+    top: 10px;
+    position: absolute;
+    visibility: hidden;
   }
   .footstep-list-div-pic {
     min-height: 100px;
